<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/purple_500"
        android:text="@string/title"
        android:padding="24dp"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp">

        <EditText
            android:id="@+id/editTextNumber1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_first_number"
            android:minHeight="48dp"
            android:inputType="numberDecimal|numberSigned" />

        <EditText
            android:id="@+id/editTextNumber2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_second_number"
            android:minHeight="48dp"
            android:inputType="numberDecimal|numberSigned" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="+" />

            <Button
                android:id="@+id/buttonSubtract"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="-" />

            <Button
                android:id="@+id/buttonMultiply"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="*" />

            <Button
                android:id="@+id/buttonDivide"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="/" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewResult1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/result1"
            android:padding="8dp"
            android:textSize="24sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@android:color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/titleSqrt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/title_sqrt"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="253dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_number"
                android:inputType="numberDecimal|numberSigned"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/buttonSqrt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="√" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewResult2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/result2"
            android:padding="8dp"
            android:paddingTop="8dp"
            android:textSize="24sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@android:color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="258dp"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/titleForDegree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/title_for_degree"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextNumberForNumb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_number_for_numb"
            android:inputType="numberDecimal|numberSigned"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextNumberForDeg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_number_for_deg"
            android:inputType="numberDecimal|numberSigned"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/buttonPower"
            android:layout_width="185dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="^" />

        <TextView
            android:id="@+id/textViewResult3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/result3"
            android:padding="8dp"
            android:textSize="24sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@android:color/white"/>

</LinearLayout>